examples/errors/unknown_field_init/main.hd
struct Point {
    x: int,
    y: int
}

fn main(): int {
    let p = Point { x: 10, y: 20, z: 30 };
    return 0;
}
